hphp/test/slow/using/bad-lambda1.php.expectf
Fatal error: Call to undefined method Closure$;%d::__dispose() in %s/test/slow/using/bad-lambda1.php on line 3
